# mcp-agent

./: AGENTS.md  README.md  agents.md  mcp_agent.config.yaml  mcp_agent.secrets.yaml.example  pyproject.toml
.github/workflows/: checks.yml  main-checks.yml  pr-checks.yml  publish-pypi.yml  release-drafter.yml
docs/analysis/: test-hang-root-cause.md
docs/app_construction/: canonical_system.md
examples/tracing/langfuse/: main.py
schema/: mcp-agent.config.schema.json
src/mcp/: __init__.py  types.py
src/mcp_agent/: app.py  config.py
src/mcp_agent/adapters/: base.py  github.py
src/mcp_agent/agents/: AGENTS.md  agent.py  agent_spec.py
src/mcp_agent/agents/app_construction/: README.md  __init__.py  planning_agent.py  (+5 more)
src/mcp_agent/cli/: AGENTS.md
src/mcp_agent/client/: http.py
src/mcp_agent/context/: toolkit.py
src/mcp_agent/core/: AGENTS.md  context.py
src/mcp_agent/data/: AGENTS.md
src/mcp_agent/elicitation/: AGENTS.md
src/mcp_agent/errors/: canonical.py
src/mcp_agent/eval/: AGENTS.md
src/mcp_agent/executor/: AGENTS.md  executor.py
src/mcp_agent/human_input/: AGENTS.md  console_handler.py  elicitation_handler.py  runtime.py  types.py
src/mcp_agent/logging/: AGENTS.md
src/mcp_agent/mcp/: AGENTS.md  sampling_handler.py
src/mcp_agent/models/: __init__.py  agent.py  human_input.py  orchestrator.py  tool.py  workflow.py
src/mcp_agent/oauth/: AGENTS.md
src/mcp_agent/orchestrator/: runtime.py
src/mcp_agent/registry/: agent.py  models.py  tool.py
src/mcp_agent/server/: AGENTS.md
src/mcp_agent/telemetry/: AGENTS.md
src/mcp_agent/tools/: AGENTS.md  __init__.py  antigravity_tool.py  claude_tool.py  codex_tool.py  grok_tool.py  kimi_tool.py  qwen_tool.py
src/mcp_agent/tracing/: AGENTS.md
src/mcp_agent/utils/: AGENTS.md
src/mcp_agent/workflows/: AGENTS.md  app_construction_orchestrator.py  composer.py  factory.py
src/tools/: read.me
tests/: conftest.py  test_app.py
tests/agents/: test_agent.py
tests/human_input/: test_elicitation_handler.py
tests/public_api/: test_management_api.py
tests/secrets/: test_bridge_unit.py
tests/tool_clients/: conftest.py  test_breaker_transitions.py  test_error_mapping.py  test_pydantic_validation.py  test_retry_and_backoff.py  test_telemetry.py
tests/tools/: test_antigravity_tool.py  test_claude_tool.py  test_codex_tool.py  test_grok_tool.py  test_kimi_tool.py  test_qwen_tool.py
tests/workflows/: test_implementation_workflow.py
tests/workflows/app_construction/: test_app_construction_orchestrator.py
tests/workflows/vibe_coding/: test_vibe_coding_orchestrator.py
(+35 files in other folders)
