47 
48 
49 anthropic_vertex = [
50   "anthropic[vertex]>=0.52.0",
51   "google-cloud-aiplatform>=1.101.0",
52 ]
53 
54 bedrock = [
55   "boto3>=1.37.23"
56 ]
57 openai = [
58   "openai>=1.58.1",
59 ]
60 azure = [
61   "azure-ai-inference>=1.0.0b9",
62   "azure-identity>=1.22.0"
63 ]
64 google = [
65   "google-genai>=1.10.0",
66 ]
67 cohere = [
68   "cohere>=5.13.4",
69 ]
70 langchain = [
71   "langchain-core>=0.3.64",
72 ]
73 crewai = [
74   "crewai>=0.126.0",
75 ]
76 cli = [
77   "hvac>=1.1.1",
78   "httpx>=0.28.1",
79   "pyjwt>=2.10.1",
80   "typer[all]>=0.15.3",
81   "watchdog>=6.0.0"
82 ]
83 
84 [build-system]
85 requires = ["hatchling"]
86 build-backend = "hatchling.build"
87 
88 [tool.uv.dependency-groups]
89 dev = [
90   "pytest>=8.0.0",
91   "pytest-asyncio>=0.23.0",
92   "pytest-cov>=4.1.0",
93   "ruff>=0.3.0",
94   "pre-commit>=3.6.0",
95 ]